Add new feature to Login by RefreshToken
